--- a/src/style.css
+++ b/src/style.css
@@ -210,6 +210,9 @@ body {
   font-size: 32px;
   line-height: 1;
 }
+.icon-forecast {
+  font-size: 30px;
+}
 .forecast-by-days_temp {
   margin: 0;
 }
