--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,7 @@ body {
 }
 .widget-wrapper {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 100%;
@@ -121,6 +122,7 @@ body {
   border: solid 1.5px #ffffff;
   text-align: left;
   font-size: 20px;
+  color: #ffffff;
 }
 .day-detailed-info__content {
   display: inline-grid;
@@ -184,7 +186,7 @@ body {
   max-width: 16%;
   min-width: 160px;
   flex-grow: 1;
-  margin: 0 10px 20px;
+  margin: 0 10px 10px;
   padding: 15px;
   background-color: rgba(255, 255, 255, 0.2);
   border: solid 1.5px #ffffff;
@@ -197,14 +199,15 @@ body {
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.forecast-by-days_icon {
+.forecast-by-days__icon {
   display: block;
   margin: 10px 0;
-  font-size: 32px;
+  font-size: 22px;
   line-height: 1;
 }
 .icon-forecast {
-  font-size: 30px;
+  width: 30%;
+  height: auto;
 }
 .forecast-by-days_temp {
   margin: 0;
