--- a/src/style.css
+++ b/src/style.css
@@ -22,7 +22,7 @@ body {
   border-radius: 10px;
   background-color: rgba(235, 233, 238, 0.3);
   overflow: auto;
-  font-family: "Tapestry", cursive;
+  font-family: Arial, sans-serif;
 }
 @media all and (min-width: 850px) {
   .day-base-info {
